#824 Fix track detail alignment (#825)

--- a/src/app/themes/volumio3/browse-music/components/music-item.scss
+++ b/src/app/themes/volumio3/browse-music/components/music-item.scss
@@ -97,7 +97,7 @@
 }
 .item__album {
     flex: 0 1 auto;
-    padding: 0 4px;
+    padding: 0 4px 0 0;
     color: $theme-primary-color;
 }
 .item__artist {
